# master_mind_cpp

./: CMakeLists.txt  Dockerfile  README.md  def.h  main.cpp  policy.h
.github/workflows/: cmake.yml  docker-image.yml
src/: CMakeLists.txt  codeGenerator.cpp  codeGenerator.h  config.h  def.h  itertools.cpp  itertools.h  main.cpp  policy.cpp  policy.h  run.cpp  run.h  runMpi.cpp  runMpi.h  trial.cpp  trial.h  utils.cpp  utils.h
test/: CMakeLists.txt  test.cpp  testCodeGenerator.cpp  testCodeGenerator.h  testItertools.h  testPolicy.cpp  testPolicy.h  testTrial.cpp  testTrial.h  testUtils.cpp  testUtils.h
